--- a/app/views/unique_pokemons/show.html.erb
+++ b/app/views/unique_pokemons/show.html.erb
@@ -177,7 +177,7 @@
       <%= @unique_pokemon.atk_iv%>
     </div>
     <div class="col-sm-1">
-      <b><%= @unique_pokemon.pokemon.atk.to_i + @unique_pokemon.atk_iv + @unique_pokemon.atk_ev/4%></b>
+      <b><%= @unique_pokemon.atk %></b>
     </div>
   </div>
 
@@ -197,7 +197,7 @@
       <%= @unique_pokemon.defe_iv%>
     </div>
     <div class="col-sm-1">
-      <b><%= @unique_pokemon.pokemon.defe.to_i + @unique_pokemon.defe_iv + @unique_pokemon.defe_ev/4%></b>
+      <b><%= @unique_pokemon.defe.to_i%></b>
     </div>
   </div>
 
@@ -217,7 +217,7 @@
       <%= @unique_pokemon.spa_iv%>
     </div>
     <div class="col-sm-1">
-      <b><%= @unique_pokemon.pokemon.spa.to_i + @unique_pokemon.spa_iv + @unique_pokemon.spa_ev/4%></b>
+      <b><%= @unique_pokemon.spa.to_i%></b>
     </div>
   </div>
 
@@ -237,7 +237,7 @@
       <%= @unique_pokemon.spd_iv%>
     </div>
     <div class="col-sm-1">
-      <b><%= @unique_pokemon.pokemon.spd.to_i + @unique_pokemon.spd_iv + @unique_pokemon.spd_ev/4%></b>
+      <b><%= @unique_pokemon.spd.to_i%></b>
     </div>
   </div>
 
@@ -256,7 +256,7 @@
       <%= @unique_pokemon.spe_iv%>
     </div>
     <div class="col-sm-1">
-      <b><%= @unique_pokemon.pokemon.spe.to_i + @unique_pokemon.spe_iv + @unique_pokemon.spe_ev/4%></b>
+      <b><%= @unique_pokemon.spe.to_i%></b>
     </div>
   </div>
   <p class="card=text"></p>
