--- a/app/views/unique_pokemons/show.html.erb
+++ b/app/views/unique_pokemons/show.html.erb
@@ -134,7 +134,7 @@
   <p>
     <div class="row">
     <div class="col-sm-3">
-      <b>Abilities: </b> <%= @unique_pokemon.pokemon.abilities%> 
+      <b>Abilities: </b> <%= @unique_pokemon.ability%> 
     </div>
     <div class="col-sm-3">
     <b>Nature: </b> <%= @unique_pokemon.nature %>
