added trainers index.html.erb, established relation of teams to user, modified teams_controller create action to be fullstack

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,9 @@
             <a class="nav-link" href="/unique_pokemons">Your Pokemon</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/teams">Your Teams</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/trainers">Your Trainers</a>
           </li>
           <% if current_user %>
