coded teams show.html.erb, converted update to fullstack for teams controller, added edit buttom for teams

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -34,6 +34,7 @@
                     <% end %>
                   </p>
                   <p class="card=text"></p>
+                  <%= link_to "Go to page", current_user.teams[index] %>
               </div>
             </div>
                               <p class="card=text"></p>
